# SysMLBuilder

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
docs/: benchmark_scoring_guide.md  customization_map.md  developer_design_rationale.md  dont_panic_batmobile_displayable_roundtrip.md  dont_panic_batmobile_roundtrip.md  gfse_testdata_design_feedback.md  standard_requirement_spec_format.md  use_cases.md  user_input_to_sysml_flow.md  vehicle_practice_expression_views_roundtrip.md
example/: README.md  case_manifest.yaml
profiles/: automotive_control_profile_v3.yaml  benchmark_lints.yaml  canonical_profiles.yaml  case_profiles.yaml  common_semantic_ir_schema.yaml  domain_vocabulary_automotive_control.yaml  example_retrieval.yaml  generic_case_profile.yaml  gfse_reference_benchmark_profile.yaml  model_lints.yaml  projection_profiles.yaml  reference_model_trace.yaml  requirement_contract.yaml  requirement_patterns.yaml  review_overlay.yaml  satisfiability_model.yaml
reports/: benchmark_summary.md  compatibility_20cases.yaml  sysml_syntax_validation.yaml  validation_report.yaml
scripts/: check_20case_compatibility.py  generate_japanese_suite.py  regenerate_examples.py  run_cameo_import_smoke.py  run_local_suite.py  run_local_suite_ja.py  run_sidecar_smoke.py  validate_pack.py  validate_sysml_syntax.py
sidecar/: pom.xml
tests/: test_additional_testdata_pack.py  test_common_ir_pipeline.py  test_dont_panic_batmobile_displayable_roundtrip.py  test_dont_panic_batmobile_roundtrip.py  test_gfse_suite.py  test_randomized_input_resilience.py  (+3 more)
(+475 files in other folders)
